3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

socket/image.c: Change esrv_send_face to check for <=0 instead of <0 on face
  number.
socket/request.c: Change if statement that acted improperly to determine when 
  to send faces.
MSW 2005-03-27

include/sproto.h: get_who_escape_code_value is void, not void*.
server/c_misc.c: move local function outside the function.
server/c_wiz.c: remove sleep( 1 ) that would cause whole server to sleep one sec.
Ryo 2005-03-23

common/living.c: Allow luck to drop back to zero. Limit bad luck object to
   +/-100 to prevent overflows.
Andreas Kirschbaum 2005-03-22

common/living.c: When randomly adjusting luck, change both op->stats.luck and
   the applied bad_luck object.
server/attack.c: Do not decrease luck if a player kills himself with a spell
   or pet.
Andreas Kirschbaum 2005-03-20

server/c_wiz.c: change command_free() and command_remove() to always
  process the head of the object - doing this operations on the non head
  will typically always cause problems.
MSW 2005-03-19

This change makes it so that the smoothing information is pushed to the client
(if the client is using smoothing) instead of a process were we tell the
client the smoothlevel and the client then has to request the face info for
smoothing.  If we know the client wants the info, much easier to push it to
the client.  This simplifies the client code (doesn't have to keep track
of what is requests).  It also fixes the 'problem' that when you join the
game, you get a few frames with no smoothing and then the smoothing shows
up, which seems a bit odd.  My testing shows that old clients that want
smoothing use this new logic withouth any problems.
--